# rag

./: .env.example  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: main.py
app/api/routes/: documents.py
app/core/: config.py  logging.py
app/schemas/: agent.py  document.py  query.py
app/services/: agent.py  document.py  embeddings.py  pinecone.py
app/utils/: doc_to_vectores.py  text_extraction.py  text_to_vectores.py
tests/: __init__.py  conftest.py  test_runner.py  test_schemas.py  test_services.py  test_utils.py
