[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]==0.119.0",
    "langchain-core==0.3.79",
    "langchain-openai==0.3.35",
    "pinecone==7.3.0",
    "pydantic-settings==2.11.0",
    "sqlmodel==0.0.27",
]
