[project]
name = "rag"
version = "0.1.0"
description = "Sistema RAG con FastAPI, LangChain y Pinecone"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "langchain-openai>=0.3.30",
    "langchain-text-splitters>=0.3.11",
    "pandas>=2.3.3",
    "pinecone>=7.0.0",
    "pydantic-settings>=2.10.0",
    "PyPDF2>=3.0.0",
    "python-docx>=0.8.11",
    "python-multipart>=0.0.18",
    "sqlmodel>=0.0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
